--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <artifactId>poi</artifactId>
             <version>3.17</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.10</version>
+</dependency>
+
     </dependencies>
 
     <build>
