--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=clinic-management
-server.port=${SERVER_PORT:2609}
+server.port=${SERVER_PORT:8888}
 
 spring.data.mongodb.uri=mongodb+srv://juvia:locnt2609@juvia0.bgzyzm9.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=clinic
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
